--- a/docs/_layouts/documentation.html
+++ b/docs/_layouts/documentation.html
@@ -4,10 +4,10 @@ route: documentation
 ---
 
 <div class="container">
+  {% include navbar.html id="Documentation" %}
 </div>
 
 <section class="hero is-primary">
-  {% include navbar.html id="Documentation" %}
   <div class="hero-body">
     <div class="container">
       <div class="columns is-vcentered">
@@ -38,6 +38,9 @@ route: documentation
           </li>
           <li {% if page.doc-tab == 'grid' %}class="is-active"{% endif %}>
             <a href="{{ site.url }}/documentation/grid/columns">Grid</a>
+          </li>
+          <li {% if page.doc-tab == 'form' %}class="is-active"{% endif %}>
+            <a href="{{ site.url }}/documentation/form/general">Form</a>
           </li>
           <li {% if page.doc-tab == 'elements' %}class="is-active"{% endif %}>
             <a href="{{ site.url }}/documentation/elements/box/">Elements</a>
