better sass selectors

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -74,13 +74,11 @@ $input-radius:              $radius !default
   min-width: 100%
   padding: 0.625em
   resize: vertical
-
-.textarea:not([rows])
-  max-height: 600px
-  min-height: 120px
-
-.textarea[rows]
-  height: auto
+  &:not([rows])
+    max-height: 600px
+    min-height: 120px
+  &[rows]
+    height: unset
 
 .checkbox,
 .radio
