--- a/sass/components/message.sass
+++ b/sass/components/message.sass
@@ -30,10 +30,10 @@
   line-height: 1.25
   padding: 0.5em 0.75em
   position: relative
-  a,
+  a:not(.button),
   strong
     color: currentColor
-  a
+  a:not(.button)
     text-decoration: underline
   .delete
     flex-grow: 0
@@ -49,10 +49,10 @@
   border-radius: $radius
   color: $text
   padding: 1em 1.25em
-  a,
+  a:not(.button),
   strong
     color: currentColor
-  a
+  a:not(.button)
     text-decoration: underline
   code,
   pre
