--- a/docs/_includes/blog-hero.html
+++ b/docs/_includes/blog-hero.html
@@ -2,7 +2,7 @@
   {% include navbar.html id="BlogHero" %}
 </div>
 
-<section class="hero is-primary">
+<section class="hero is-warning">
   <div class="hero-body">
     <div class="container">
       <div class="columns is-vcentered">
@@ -13,7 +13,7 @@
           <p class="subtitle">
             Stay updated about new features, bug fixes, and releases
           </p>
-          <a class="button is-primary is-inverted" href="{{ site.url }}/atom.xml">
+          <a class="button is-rss" href="{{ site.url }}/atom.xml">
             <span class="icon">
               <i class="fa fa-rss"></i>
             </span>
