--- a/docs/_sass/header.sass
+++ b/docs/_sass/header.sass
@@ -22,3 +22,9 @@ $twitter: #55acee
     width: 16rem
     .navbar-item
       white-space: normal
+  #moreDropdown
+    width: 16rem
+    .navbar-item
+      padding-right: 1rem
+      .level
+        flex-grow: 1
