--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -50,6 +50,29 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
 
 // Text
 
+@each $size in $sizes
+  $i: index($sizes, $size)
+  .is-size-#{$i}
+    font-size: $size
+  +mobile
+    .is-size-#{$i}-mobile
+      font-size: $size
+  +tablet
+    .is-size-#{$i}-tablet
+      font-size: $size
+  +touch
+    .is-size-#{$i}-touch
+      font-size: $size
+  +desktop
+    .is-size-#{$i}-desktop
+      font-size: $size
+  +widescreen
+    .is-size-#{$i}-widescreen
+      font-size: $size
+  +fullhd
+    .is-size-#{$i}-fullhd
+      font-size: $size
+
 .has-text-centered
   text-align: center !important
 
