Fixes #6 RTL for components with additional RTL mixin

--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -34,9 +34,13 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
 
 .is-pulled-left
   float: left !important
+  +rtl
+    float: right !important
 
 .is-pulled-right
   float: right !important
+  +rtl
+    float: left !important
 
 // Overflow
 
@@ -78,9 +82,13 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
 
 .has-text-left
   text-align: left !important
+  +rtl
+    text-align: right !important
 
 .has-text-right
   text-align: right !important
+  +rtl
+    text-align: left !important
 
 @each $name, $pair in $colors
   $color: nth($pair, 1)
