--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -57,6 +57,9 @@ $card-footer-border: $border !default
   padding: 0.75rem
   &:not(:last-child)
     border-right: 1px solid $card-footer-border
+    +rtl
+      border-right: unset
+      border-left: 1px solid $card-footer-border
 
 // Combinations
 
