--- a/sass/components/menu.sass
+++ b/sass/components/menu.sass
@@ -20,6 +20,9 @@
       border-left: 1px solid $border
       margin: 0.75em
       padding-left: 0.75em
+      +rtl
+        border-left: unset
+        border-right: 1px solid $border
 
 .menu-label
   color: $text-light
