--- a/sass/components/panel.sass
+++ b/sass/components/panel.sass
@@ -49,6 +49,9 @@
   padding: 0.5em 0.75em
   input[type="checkbox"]
     margin-right: 0.75em
+    +rtl
+      margin-right: unset
+      margin-left: 0.75em
   & > .control
     flex-grow: 1
     flex-shrink: 1
@@ -58,6 +61,9 @@
   &.is-active
     border-left-color: $link
     color: $link-active
+    +rtl
+      border-left-color: unset
+      border-right-color: $link
     .panel-icon
       color: $link
 
@@ -71,6 +77,9 @@ label.panel-block
   +fa(14px, 1em)
   color: $text-light
   margin-right: 0.75em
+  +rtl
+    margin-right: unset
+    margin-left: 0.75em
   .fa
     font-size: inherit
     line-height: inherit
