--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -50,6 +50,9 @@
     background-color: $background
     border-left: 5px solid $border
     padding: 1.25em 1.5em
+    +rtl
+      border-left: unset
+      border-right: 5px solid $border
   ol
     list-style: decimal outside
     margin-left: 2em
@@ -91,6 +94,8 @@
     th
       color: $text-strong
       text-align: left
+      +rtl
+        text-align: right
     tr
       &:hover
         background-color: $background
