--- a/sass/elements/notification.sass
+++ b/sass/elements/notification.sass
@@ -4,6 +4,8 @@
   border-radius: $radius
   padding: 1.25rem 2.5rem 1.25rem 1.5rem
   position: relative
+  +rtl
+    padding: 1.25rem 1.5rem 1.25rem 2.5rem
   a:not(.button)
     color: currentColor
     text-decoration: underline
@@ -18,6 +20,9 @@
     position: absolute
     right: 0.5em
     top: 0.5em
+    +rtl
+      right: unset
+      left: 0.5em
   .title,
   .subtitle,
   .content
