--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -14,6 +14,9 @@
   .delete
     margin-left: 0.25em
     margin-right: -0.375em
+    +rtl
+      margin-left: -0.375em
+      margin-right: 0.25em
   // Colors
   @each $name, $pair in $colors
     $color: nth($pair, 1)
