--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -10,6 +10,9 @@
     position: absolute
     top: 50%
     transform: translate3d(-50%, -50%, 0)
+    +rtl
+      left: unset
+      right: 50%
   // Modifiers
   &.is-transparent
     opacity: 0.3
@@ -30,6 +33,9 @@
     justify-content: center
     .button:not(:last-child)
       margin-right: 1.5rem
+      +rtl
+        margin-right: unset
+        margin-left: 1.5rem
 
 // Containers
 
