--- a/sass/components/level.sass
+++ b/sass/components/level.sass
@@ -21,6 +21,9 @@
   .level-item
     &:not(:last-child)
       margin-right: 0.75rem
+      +rtl
+        margin-right: unset
+        margin-left: 0.75rem
     // Modifiers
     &.is-flexible
       flex-grow: 1
@@ -46,6 +49,8 @@
   +block
   align-items: center
   justify-content: space-between
+  +rtl
+    flex-direction: row-reverse
   code
     border-radius: $radius
   img
