--- a/sass/components/media.sass
+++ b/sass/components/media.sass
@@ -6,20 +6,31 @@
 
 .media-left
   margin-right: 1rem
+  +rtl
+    margin-right: unset
+    margin-left: 1rem
 
 .media-right
   margin-left: 1rem
+  +rtl
+    margin-left: unset
+    margin-right: 1rem
 
 .media-content
   flex-basis: auto
   flex-grow: 1
   flex-shrink: 1
   text-align: left
+  +rtl
+    text-align: right
 
 .media
   align-items: flex-start
   display: flex
   text-align: left
+  +rtl
+    text-align: right
+    align-items: flex-end
   .content:not(:last-child)
     margin-bottom: 0.75rem
   .media
