--- a/sass/components/message.sass
+++ b/sass/components/message.sass
@@ -39,6 +39,9 @@
     flex-grow: 0
     flex-shrink: 0
     margin-left: 0.75em
+    +rtl
+      margin-left: unset
+      margin-right: 0.75em
   & + .message-body
     border-top-left-radius: 0
     border-top-right-radius: 0
