--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -23,6 +23,9 @@
   right: 20px
   top: 20px
   width: 40px
+  +rtl
+    right: unset
+    left: 20px
 
 .modal-card
   display: flex
@@ -59,6 +62,9 @@
   .button
     &:not(:last-child)
       margin-right: 10px
+      +rtl
+        margin-right: unset
+        margin-left: 10px
 
 .modal-card-body
   +overflow-touch
