--- a/sass/components/nav.sass
+++ b/sass/components/nav.sass
@@ -46,6 +46,8 @@ a.nav-item:not(.button)
     padding-left: 1rem
     padding-right: 1rem
     padding-top: calc(0.75rem - 1px)
+    +rtl
+      padding: calc(0.75rem - 1px) 1rem
     &:hover
       border-bottom-color: $primary
       border-top-color: transparent
@@ -57,6 +59,9 @@ a.nav-item:not(.button)
   +desktop
     &.is-brand
       padding-left: 0
+      +rtl
+        padding-left: unset
+        pading-right: 0
 
 // Containers
 
