--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -50,6 +50,9 @@ $navbar-divider-background: $border !default
 .navbar-burger
   +hamburger($navbar-height)
   margin-left: auto
+  +rtl
+    margin-left: unset
+    margin-right: auto
 
 .navbar-menu
   display: none
@@ -95,6 +98,9 @@ a.navbar-item,
 
 .navbar-link
   padding-right: 2.5em
+  +rtl
+    padding-right: unset
+    padding-left: 2.5em
 
 .navbar-dropdown
   font-size: 0.875rem
@@ -173,15 +179,26 @@ a.navbar-item,
       margin-top: -0.375em
       right: 1.125em
       top: 50%
+      +rtl
+        right: unset
+        left: 1.125em
   .navbar-menu
     flex-grow: 1
     flex-shrink: 0
   .navbar-start
     justify-content: flex-start
     margin-right: auto
+    +rtl
+      justify-content: flex-end
+      margin-right: unset
+      margin-left: auto
   .navbar-end
     justify-content: flex-end
     margin-left: auto
+    +rtl
+      justify-content: flex-start
+      margin-left: unset
+      margin-right: auto
   .navbar-dropdown
     background-color: $navbar-dropdown-background
     border-bottom-left-radius: $navbar-dropdown-radius
@@ -195,11 +212,17 @@ a.navbar-item,
     position: absolute
     top: 100%
     z-index: $navbar-dropdown-z
+    +rtl
+      left: unset
+      right: 0
     .navbar-item
       padding: 0.375rem 1rem
       white-space: nowrap
     a.navbar-item
       padding-right: 3rem
+      +rtl
+        padding-right: unset
+        padding-left: 3rem
       &:hover
         background-color: $navbar-dropdown-item-hover-background
         color: $navbar-dropdown-item-hover
