--- a/sass/elements/table.sass
+++ b/sass/elements/table.sass
@@ -30,6 +30,8 @@ $table-row-even-hover-background: $white-ter !default
   th
     color: $text-strong
     text-align: left
+    +rtl
+      text-align: right
   tr
     &:hover
       background-color: $table-row-hover-background
