--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -26,20 +26,38 @@
     width: 25%
   .columns.is-mobile > &.is-offset-three-quarters
     margin-left: 75%
+    +rtl
+      margin-left: unset
+      margin-right: 75%
   .columns.is-mobile > &.is-offset-two-thirds
     margin-left: 66.6666%
+    +rtl
+      margin-left: unset
+      margin-right: 66.6666%
   .columns.is-mobile > &.is-offset-half
     margin-left: 50%
+    +rtl
+      margin-left: unset
+      margin-right: 50%
   .columns.is-mobile > &.is-offset-one-third
     margin-left: 33.3333%
+    +rtl
+      margin-left: unset
+      margin-right: 33.3333%
   .columns.is-mobile > &.is-offset-one-quarter
     margin-left: 25%
+    +rtl
+      margin-left: unset
+      margin-right: 25%
   @for $i from 1 through 12
     .columns.is-mobile > &.is-#{$i}
       flex: none
       width: ($i / 12) * 100%
     .columns.is-mobile > &.is-offset-#{$i}
       margin-left: ($i / 12) * 100%
+      +rtl
+        margin-left: unset
+        margin-right: ($i / 12) * 100%
   +mobile
     &.is-narrow-mobile
       flex: none
@@ -63,20 +81,38 @@
       width: 25%
     &.is-offset-three-quarters-mobile
       margin-left: 75%
+      +rtl
+        margin-left: unset
+        margin-right: 75%
     &.is-offset-two-thirds-mobile
       margin-left: 66.6666%
+      +rtl
+        margin-left: unset
+        margin-right: 66.6666%
     &.is-offset-half-mobile
       margin-left: 50%
+      +rtl
+        margin-left: unset
+        margin-right: 50%
     &.is-offset-one-third-mobile
       margin-left: 33.3333%
+      +rtl
+        margin-left: unset
+        margin-right: 33.3333%
     &.is-offset-one-quarter-mobile
       margin-left: 25%
+      +rtl
+        margin-left: unset
+        margin-right: 25%
     @for $i from 1 through 12
       &.is-#{$i}-mobile
         flex: none
         width: ($i / 12) * 100%
       &.is-offset-#{$i}-mobile
         margin-left: ($i / 12) * 100%
+        +rtl
+          margin-left: unset
+          margin-right: ($i / 12) * 100%
   +tablet
     &.is-narrow,
     &.is-narrow-tablet
@@ -108,18 +144,33 @@
     &.is-offset-three-quarters,
     &.is-offset-three-quarters-tablet
       margin-left: 75%
+      +rtl
+        margin-left: unset
+        margin-right: 75%
     &.is-offset-two-thirds,
     &.is-offset-two-thirds-tablet
       margin-left: 66.6666%
+      +rtl
+        margin-left: unset
+        margin-right: 66.6666%
     &.is-offset-half,
     &.is-offset-half-tablet
       margin-left: 50%
+      +rtl
+        margin-left: unset
+        margin-right: 50%
     &.is-offset-one-third,
     &.is-offset-one-third-tablet
       margin-left: 33.3333%
+      +rtl
+        margin-left: unset
+        margin-right: 33.3333%
     &.is-offset-one-quarter,
     &.is-offset-one-quarter-tablet
       margin-left: 25%
+      +rtl
+        margin-left: unset
+        margin-right: 25%
     @for $i from 1 through 12
       &.is-#{$i},
       &.is-#{$i}-tablet
@@ -128,6 +179,9 @@
       &.is-offset-#{$i},
       &.is-offset-#{$i}-tablet
         margin-left: ($i / 12) * 100%
+        +rtl
+          margin-left: unset
+          margin-right: ($i / 12) * 100%
   +touch
     &.is-narrow-touch
       flex: none
@@ -151,20 +205,38 @@
       width: 25%
     &.is-offset-three-quarters-touch
       margin-left: 75%
+      +rtl
+        margin-left: unset
+        margin-right: 75%
     &.is-offset-two-thirds-touch
       margin-left: 66.6666%
+      +rtl
+        margin-left: unset
+        margin-right: 66.6666%
     &.is-offset-half-touch
       margin-left: 50%
+      +rtl
+        margin-left: unset
+        margin-right: 50%
     &.is-offset-one-third-touch
       margin-left: 33.3333%
+      +rtl
+        margin-left: unset
+        margin-right: 33.3333%
     &.is-offset-one-quarter-touch
       margin-left: 25%
+      +rtl
+        margin-left: unset
+        margin-right: 25%
     @for $i from 1 through 12
       &.is-#{$i}-touch
         flex: none
         width: ($i / 12) * 100%
       &.is-offset-#{$i}-touch
         margin-left: ($i / 12) * 100%
+        +rtl
+          margin-left: unset
+          margin-right: ($i / 12) * 100%
   +desktop
     &.is-narrow-desktop
       flex: none
@@ -188,20 +260,35 @@
       width: 25%
     &.is-offset-three-quarters-desktop
       margin-left: 75%
+      +rtl
+        margin-left: unset
+        margin-right: 75%
     &.is-offset-two-thirds-desktop
       margin-left: 66.6666%
+      +rtl
+        margin-left: unset
+        margin-right: 66.6666%
     &.is-offset-half-desktop
       margin-left: 50%
     &.is-offset-one-third-desktop
       margin-left: 33.3333%
+      +rtl
+        margin-left: unset
+        margin-right: 33.3333%
     &.is-offset-one-quarter-desktop
       margin-left: 25%
+      +rtl
+        margin-left: unset
+        margin-right: 25%
     @for $i from 1 through 12
       &.is-#{$i}-desktop
         flex: none
         width: ($i / 12) * 100%
       &.is-offset-#{$i}-desktop
         margin-left: ($i / 12) * 100%
+        +rtl
+          margin-left: unset
+          margin-right: ($i / 12) * 100%
   +widescreen
     &.is-narrow-widescreen
       flex: none
@@ -225,20 +312,38 @@
       width: 25%
     &.is-offset-three-quarters-widescreen
       margin-left: 75%
+      +rtl
+        margin-left: unset
+        margin-right: 75%
     &.is-offset-two-thirds-widescreen
       margin-left: 66.6666%
+      +rtl
+        margin-left: unset
+        margin-right: 66.6666%
     &.is-offset-half-widescreen
       margin-left: 50%
+      +rtl
+        margin-left: unset
+        margin-right: 50%
     &.is-offset-one-third-widescreen
       margin-left: 33.3333%
+      +rtl
+        margin-left: unset
+        margin-right: 33.3333%
     &.is-offset-one-quarter-widescreen
       margin-left: 25%
+      +rtl
+        margin-left: unset
+        margin-right: 25%
     @for $i from 1 through 12
       &.is-#{$i}-widescreen
         flex: none
         width: ($i / 12) * 100%
       &.is-offset-#{$i}-widescreen
         margin-left: ($i / 12) * 100%
+        +rtl
+          margin-left: unset
+          margin-right: ($i / 12) * 100%
   +fullhd
     &.is-narrow-fullhd
       flex: none
@@ -262,20 +367,38 @@
       width: 25%
     &.is-offset-three-quarters-fullhd
       margin-left: 75%
+      +rtl
+        margin-left: unset
+        margin-right: 75%
     &.is-offset-two-thirds-fullhd
       margin-left: 66.6666%
+      +rtl
+        margin-left: unset
+        margin-right: 66.6666%
     &.is-offset-half-fullhd
       margin-left: 50%
+      +rtl
+        margin-left: unset
+        margin-right: 50%
     &.is-offset-one-third-fullhd
       margin-left: 33.3333%
+      +rtl
+        margin-left: unset
+        margin-right: 33.3333%
     &.is-offset-one-quarter-fullhd
       margin-left: 25%
+      +rtl
+        margin-left: unset
+        margin-right: 25%
     @for $i from 1 through 12
       &.is-#{$i}-fullhd
         flex: none
         width: ($i / 12) * 100%
       &.is-offset-#{$i}-fullhd
         margin-left: ($i / 12) * 100%
+        +rtl
+          margin-left: unset
+          margin-right: ($i / 12) * 100%
 
 .columns
   margin-left: -0.75rem
@@ -309,6 +432,9 @@
         width: 33.3333%
         & + .column
           margin-left: 0
+          +rtl
+            margin-left: unset
+            margin-right: 0
   &.is-mobile
     display: flex
   &.is-multiline
