Add dropdown button

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -3761,6 +3761,63 @@ input[type="submit"].button {
   margin-bottom: 0.75rem;
 }
 
+.dropdown {
+  display: inline-flex;
+  position: relative;
+  vertical-align: top;
+}
+
+.dropdown.is-active .dropdown-container, .dropdown.is-hoverable:hover .dropdown-container {
+  display: block;
+}
+
+.dropdown-container {
+  display: none;
+  left: 0;
+  max-width: 20rem;
+  min-width: 12rem;
+  padding-top: 4px;
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  z-index: 20;
+}
+
+.dropdown-content {
+  background-color: white;
+  border-radius: 3px;
+  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+  padding-bottom: 0.5rem;
+  padding-top: 0.5rem;
+}
+
+.dropdown-item {
+  color: #4a4a4a;
+  display: block;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  padding: 0.375rem 1rem;
+  position: relative;
+}
+
+a.dropdown-item {
+  padding-right: 3rem;
+  white-space: nowrap;
+}
+
+a.dropdown-item:hover, a.dropdown-item.is-active {
+  background-color: whitesmoke;
+  color: #0a0a0a;
+}
+
+.dropdown-divider {
+  background-color: #dbdbdb;
+  border: none;
+  display: block;
+  height: 1px;
+  margin: 0.5rem 0;
+}
+
 .level-item {
   align-items: center;
   display: flex;
@@ -7444,6 +7501,7 @@ label.panel-block:hover {
 
 .section {
   background-color: white;
+  min-height: 100vh;
   padding: 3rem 1.5rem;
 }
 
