--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2212,12 +2212,19 @@ input[type="submit"].button {
 
 .textarea {
   display: block;
-  max-height: 600px;
   max-width: 100%;
-  min-height: 120px;
   min-width: 100%;
   padding: 0.625em;
   resize: vertical;
+}
+
+.textarea:not([rows]) {
+  max-height: 600px;
+  min-height: 120px;
+}
+
+.textarea[rows] {
+  height: unset;
 }
 
 .checkbox,
