--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -235,31 +235,31 @@ table th {
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 999px) {
+@media screen and (min-width: 769px) and (max-width: 1007px) {
   .is-block-tablet-only {
     display: block !important;
   }
 }
 
-@media screen and (max-width: 999px) {
+@media screen and (max-width: 1007px) {
   .is-block-touch {
     display: block !important;
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1008px) {
   .is-block-desktop {
     display: block !important;
   }
 }
 
-@media screen and (min-width: 1000px) and (max-width: 1191px) {
+@media screen and (min-width: 1008px) and (max-width: 1199px) {
   .is-block-desktop-only {
     display: block !important;
   }
 }
 
-@media screen and (min-width: 1192px) {
+@media screen and (min-width: 1200px) {
   .is-block-widescreen {
     display: block !important;
   }
@@ -281,31 +281,31 @@ table th {
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 999px) {
+@media screen and (min-width: 769px) and (max-width: 1007px) {
   .is-flex-tablet-only {
     display: flex !important;
   }
 }
 
-@media screen and (max-width: 999px) {
+@media screen and (max-width: 1007px) {
   .is-flex-touch {
     display: flex !important;
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1008px) {
   .is-flex-desktop {
     display: flex !important;
   }
 }
 
-@media screen and (min-width: 1000px) and (max-width: 1191px) {
+@media screen and (min-width: 1008px) and (max-width: 1199px) {
   .is-flex-desktop-only {
     display: flex !important;
   }
 }
 
-@media screen and (min-width: 1192px) {
+@media screen and (min-width: 1200px) {
   .is-flex-widescreen {
     display: flex !important;
   }
@@ -327,31 +327,31 @@ table th {
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 999px) {
+@media screen and (min-width: 769px) and (max-width: 1007px) {
   .is-inline-tablet-only {
     display: inline !important;
   }
 }
 
-@media screen and (max-width: 999px) {
+@media screen and (max-width: 1007px) {
   .is-inline-touch {
     display: inline !important;
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1008px) {
   .is-inline-desktop {
     display: inline !important;
   }
 }
 
-@media screen and (min-width: 1000px) and (max-width: 1191px) {
+@media screen and (min-width: 1008px) and (max-width: 1199px) {
   .is-inline-desktop-only {
     display: inline !important;
   }
 }
 
-@media screen and (min-width: 1192px) {
+@media screen and (min-width: 1200px) {
   .is-inline-widescreen {
     display: inline !important;
   }
@@ -373,31 +373,31 @@ table th {
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 999px) {
+@media screen and (min-width: 769px) and (max-width: 1007px) {
   .is-inline-block-tablet-only {
     display: inline-block !important;
   }
 }
 
-@media screen and (max-width: 999px) {
+@media screen and (max-width: 1007px) {
   .is-inline-block-touch {
     display: inline-block !important;
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1008px) {
   .is-inline-block-desktop {
     display: inline-block !important;
   }
 }
 
-@media screen and (min-width: 1000px) and (max-width: 1191px) {
+@media screen and (min-width: 1008px) and (max-width: 1199px) {
   .is-inline-block-desktop-only {
     display: inline-block !important;
   }
 }
 
-@media screen and (min-width: 1192px) {
+@media screen and (min-width: 1200px) {
   .is-inline-block-widescreen {
     display: inline-block !important;
   }
@@ -419,31 +419,31 @@ table th {
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 999px) {
+@media screen and (min-width: 769px) and (max-width: 1007px) {
   .is-inline-flex-tablet-only {
     display: inline-flex !important;
   }
 }
 
-@media screen and (max-width: 999px) {
+@media screen and (max-width: 1007px) {
   .is-inline-flex-touch {
     display: inline-flex !important;
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1008px) {
   .is-inline-flex-desktop {
     display: inline-flex !important;
   }
 }
 
-@media screen and (min-width: 1000px) and (max-width: 1191px) {
+@media screen and (min-width: 1008px) and (max-width: 1199px) {
   .is-inline-flex-desktop-only {
     display: inline-flex !important;
   }
 }
 
-@media screen and (min-width: 1192px) {
+@media screen and (min-width: 1200px) {
   .is-inline-flex-widescreen {
     display: inline-flex !important;
   }
@@ -491,25 +491,25 @@ table th {
   }
 }
 
-@media screen and (max-width: 999px) {
+@media screen and (max-width: 1007px) {
   .is-size-1-touch {
     font-size: 3rem;
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1008px) {
   .is-size-1-desktop {
     font-size: 3rem;
   }
 }
 
-@media screen and (min-width: 1192px) {
+@media screen and (min-width: 1200px) {
   .is-size-1-widescreen {
     font-size: 3rem;
   }
 }
 
-@media screen and (min-width: 1384px) {
+@media screen and (min-width: 1392px) {
   .is-size-1-fullhd {
     font-size: 3rem;
   }
@@ -531,25 +531,25 @@ table th {
   }
 }
 
-@media screen and (max-width: 999px) {
+@media screen and (max-width: 1007px) {
   .is-size-2-touch {
     font-size: 2.5rem;
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1008px) {
   .is-size-2-desktop {
     font-size: 2.5rem;
   }
 }
 
-@media screen and (min-width: 1192px) {
+@media screen and (min-width: 1200px) {
   .is-size-2-widescreen {
     font-size: 2.5rem;
   }
 }
 
-@media screen and (min-width: 1384px) {
+@media screen and (min-width: 1392px) {
   .is-size-2-fullhd {
     font-size: 2.5rem;
   }
@@ -571,25 +571,25 @@ table th {
   }
 }
 
-@media screen and (max-width: 999px) {
+@media screen and (max-width: 1007px) {
   .is-size-3-touch {
     font-size: 2rem;
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1008px) {
   .is-size-3-desktop {
     font-size: 2rem;
   }
 }
 
-@media screen and (min-width: 1192px) {
+@media screen and (min-width: 1200px) {
   .is-size-3-widescreen {
     font-size: 2rem;
   }
 }
 
-@media screen and (min-width: 1384px) {
+@media screen and (min-width: 1392px) {
   .is-size-3-fullhd {
     font-size: 2rem;
   }
@@ -611,25 +611,25 @@ table th {
   }
 }
 
-@media screen and (max-width: 999px) {
+@media screen and (max-width: 1007px) {
   .is-size-4-touch {
     font-size: 1.5rem;
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1008px) {
   .is-size-4-desktop {
     font-size: 1.5rem;
   }
 }
 
-@media screen and (min-width: 1192px) {
+@media screen and (min-width: 1200px) {
   .is-size-4-widescreen {
     font-size: 1.5rem;
   }
 }
 
-@media screen and (min-width: 1384px) {
+@media screen and (min-width: 1392px) {
   .is-size-4-fullhd {
     font-size: 1.5rem;
   }
@@ -651,25 +651,25 @@ table th {
   }
 }
 
-@media screen and (max-width: 999px) {
+@media screen and (max-width: 1007px) {
   .is-size-5-touch {
     font-size: 1.25rem;
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1008px) {
   .is-size-5-desktop {
     font-size: 1.25rem;
   }
 }
 
-@media screen and (min-width: 1192px) {
+@media screen and (min-width: 1200px) {
   .is-size-5-widescreen {
     font-size: 1.25rem;
   }
 }
 
-@media screen and (min-width: 1384px) {
+@media screen and (min-width: 1392px) {
   .is-size-5-fullhd {
     font-size: 1.25rem;
   }
@@ -691,25 +691,25 @@ table th {
   }
 }
 
-@media screen and (max-width: 999px) {
+@media screen and (max-width: 1007px) {
   .is-size-6-touch {
     font-size: 1rem;
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1008px) {
   .is-size-6-desktop {
     font-size: 1rem;
   }
 }
 
-@media screen and (min-width: 1192px) {
+@media screen and (min-width: 1200px) {
   .is-size-6-widescreen {
     font-size: 1rem;
   }
 }
 
-@media screen and (min-width: 1384px) {
+@media screen and (min-width: 1392px) {
   .is-size-6-fullhd {
     font-size: 1rem;
   }
@@ -815,31 +815,31 @@ a.has-text-danger:hover, a.has-text-danger:focus {
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 999px) {
+@media screen and (min-width: 769px) and (max-width: 1007px) {
   .is-hidden-tablet-only {
     display: none !important;
   }
 }
 
-@media screen and (max-width: 999px) {
+@media screen and (max-width: 1007px) {
   .is-hidden-touch {
     display: none !important;
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1008px) {
   .is-hidden-desktop {
     display: none !important;
   }
 }
 
-@media screen and (min-width: 1000px) and (max-width: 1191px) {
+@media screen and (min-width: 1008px) and (max-width: 1199px) {
   .is-hidden-desktop-only {
     display: none !important;
   }
 }
 
-@media screen and (min-width: 1192px) {
+@media screen and (min-width: 1200px) {
   .is-hidden-widescreen {
     display: none !important;
   }
@@ -3428,30 +3428,41 @@ input[type="submit"].button {
 }
 
 .container {
+  margin: 0 auto;
+  max-width: 960px;
   position: relative;
+  width: 960px;
 }
 
-@media screen and (min-width: 1000px) {
-  .container {
-    margin: 0 auto;
-    max-width: 960px;
-    width: 960px;
-  }
-  .container.is-fluid {
-    margin: 0 20px;
-    max-width: none;
+.container.is-fluid {
+  margin-left: 24px;
+  margin-right: 24px;
+  max-width: none;
+  width: auto;
+}
+
+@media screen and (max-width: 1199px) {
+  .container.is-widescreen {
+    max-width: 1152px;
     width: auto;
   }
 }
 
-@media screen and (min-width: 1192px) {
+@media screen and (max-width: 1391px) {
+  .container.is-fullhd {
+    max-width: 1344px;
+    width: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .container {
     max-width: 1152px;
     width: 1152px;
   }
 }
 
-@media screen and (min-width: 1384px) {
+@media screen and (min-width: 1392px) {
   .container {
     max-width: 1344px;
     width: 1344px;
@@ -4553,7 +4564,7 @@ a.nav-item:not(.button).is-tab.is-active {
   padding-bottom: calc(0.75rem - 3px);
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1008px) {
   .nav-item a:not(.button).is-brand,
   a.nav-item:not(.button).is-brand {
     padding-left: 0;
@@ -4571,7 +4582,7 @@ a.nav-item:not(.button).is-tab.is-active {
   overflow: auto;
 }
 
-@media screen and (min-width: 1192px) {
+@media screen and (min-width: 1200px) {
   .nav-left,
   .nav-right {
     flex-basis: 0;
@@ -4800,7 +4811,7 @@ a.navbar-item:hover, a.navbar-item.is-active,
   margin: 0.5rem 0;
 }
 
-@media screen and (max-width: 999px) {
+@media screen and (max-width: 1007px) {
   .navbar-brand .navbar-item {
     align-items: center;
     display: flex;
@@ -4814,7 +4825,7 @@ a.navbar-item:hover, a.navbar-item.is-active,
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1008px) {
   .navbar,
   .navbar-menu,
   .navbar-start,
@@ -5839,7 +5850,7 @@ label.panel-block:hover {
   }
 }
 
-@media screen and (max-width: 999px) {
+@media screen and (max-width: 1007px) {
   .column.is-narrow-touch {
     flex: none;
   }
@@ -5968,7 +5979,7 @@ label.panel-block:hover {
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1008px) {
   .column.is-narrow-desktop {
     flex: none;
   }
@@ -6097,7 +6108,7 @@ label.panel-block:hover {
   }
 }
 
-@media screen and (min-width: 1192px) {
+@media screen and (min-width: 1200px) {
   .column.is-narrow-widescreen {
     flex: none;
   }
@@ -6226,7 +6237,7 @@ label.panel-block:hover {
   }
 }
 
-@media screen and (min-width: 1384px) {
+@media screen and (min-width: 1392px) {
   .column.is-narrow-fullhd {
     flex: none;
   }
@@ -6424,7 +6435,7 @@ label.panel-block:hover {
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1008px) {
   .columns.is-desktop {
     display: flex;
   }
@@ -7501,11 +7512,10 @@ label.panel-block:hover {
 
 .section {
   background-color: white;
-  min-height: 100vh;
   padding: 3rem 1.5rem;
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1008px) {
   .section.is-medium {
     padding: 9rem 1.5rem;
   }
@@ -8057,7 +8067,7 @@ html.route-index #carbon {
   color: white;
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1008px) {
   #blogDropdown {
     width: 16rem;
   }
