--- a/docs/documentation/components/dropdown.html
+++ b/docs/documentation/components/dropdown.html
@@ -66,10 +66,26 @@ doc-subtab: dropdown
 </div>
 {% endcapture %}
 
+{% include subnav-components.html %}
+
 <section class="section">
   <div class="container">
-    <h1 class="title">Dropdown</h1>
-    <h2 class="subtitle">An interactive <strong>dropdown menu</strong> for discoverable content</h2>
+
+    <div class="columns" style="margin-bottom: -0.75rem !important;">
+      <div class="column">
+        <h1 class="title">Dropdown</h1>
+        <h2 class="subtitle">
+          An interactive <strong>dropdown menu</strong> for discoverable content
+        </h2>
+      </div>
+
+      <div class="column is-narrow">
+        <p class="content">
+          <span class="tag is-success">New!</span>
+          <span class="tag is-info">0.4.4</span>
+        </p>
+      </div>
+    </div>
 
     <hr>
 
