Add dropdown description

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -3778,11 +3778,11 @@ input[type="submit"].button {
   vertical-align: top;
 }
 
-.dropdown.is-active .dropdown-container, .dropdown.is-hoverable:hover .dropdown-container {
+.dropdown.is-active .dropdown-menu, .dropdown.is-hoverable:hover .dropdown-menu {
   display: block;
 }
 
-.dropdown-container {
+.dropdown-menu {
   display: none;
   left: 0;
   max-width: 20rem;
