--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -19,10 +19,10 @@ $dropdown-divider-background: $border !default
   vertical-align: top
   &.is-active,
   &.is-hoverable:hover
-    .dropdown-container
+    .dropdown-menu
       display: block
 
-.dropdown-container
+.dropdown-menu
   display: none
   left: 0
   max-width: 20rem
