Make title and subtile element responsive

--- a/sass/elements/title.sass
+++ b/sass/elements/title.sass
@@ -36,6 +36,31 @@ $subtitle-weight:   $weight-light !default
     $i: index($sizes, $size)
     &.is-#{$i}
       font-size: $size
+  +mobile
+    @each $size in $sizes
+      $i: index($sizes, $size)
+      &.is-#{$i}-mobile
+        font-size: $size
+  +tablet
+    @each $size in $sizes
+      $i: index($sizes, $size)
+      &.is-#{$i}-tablet
+        font-size: $size
+  +touch
+    @each $size in $sizes
+      $i: index($sizes, $size)
+      &.is-#{$i}-touch
+        font-size: $size
+  +desktop
+    @each $size in $sizes
+      $i: index($sizes, $size)
+      &.is-#{$i}-desktop
+        font-size: $size
+  +widescreen
+    @each $size in $sizes
+      $i: index($sizes, $size)
+      &.is-#{$i}-widescreen
+        font-size: $size
 
 .subtitle
   color: $subtitle
@@ -51,3 +76,28 @@ $subtitle-weight:   $weight-light !default
     $i: index($sizes, $size)
     &.is-#{$i}
       font-size: $size
+  +mobile
+    @each $size in $sizes
+      $i: index($sizes, $size)
+      &.is-#{$i}-mobile
+        font-size: $size
+  +tablet
+    @each $size in $sizes
+      $i: index($sizes, $size)
+      &.is-#{$i}-tablet
+        font-size: $size
+  +touch
+    @each $size in $sizes
+      $i: index($sizes, $size)
+      &.is-#{$i}-touch
+        font-size: $size
+  +desktop
+    @each $size in $sizes
+      $i: index($sizes, $size)
+      &.is-#{$i}-desktop
+        font-size: $size
+  +widescreen
+    @each $size in $sizes
+      $i: index($sizes, $size)
+      &.is-#{$i}-widescreen
+        font-size: $size
