Add more dropdown doc

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -3816,9 +3816,14 @@ a.dropdown-item {
   white-space: nowrap;
 }
 
-a.dropdown-item:hover, a.dropdown-item.is-active {
+a.dropdown-item:hover {
   background-color: whitesmoke;
   color: #0a0a0a;
+}
+
+a.dropdown-item.is-active {
+  background-color: #00d1b2;
+  color: #fff;
 }
 
 .dropdown-divider {
