--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -8,8 +8,8 @@ $dropdown-content-z: 20 !default
 $dropdown-item: $grey-dark !default
 $dropdown-item-hover: $black !default
 $dropdown-item-hover-background: $background !default
-$dropdown-item-active: $black !default
-$dropdown-item-active-background: transparent !default
+$dropdown-item-active: $primary-invert !default
+$dropdown-item-active-background: $primary !default
 
 $dropdown-divider-background: $border !default
 
@@ -51,10 +51,12 @@ $dropdown-divider-background: $border !default
 a.dropdown-item
   padding-right: 3rem
   white-space: nowrap
-  &:hover,
-  &.is-active
+  &:hover
     background-color: $dropdown-item-hover-background
     color: $dropdown-item-hover
+  &.is-active
+    background-color: $dropdown-item-active-background
+    color: $dropdown-item-active
 
 .dropdown-divider
   background-color: $dropdown-divider-background
