Fix desktop container

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -3429,16 +3429,20 @@ input[type="submit"].button {
 
 .container {
   margin: 0 auto;
-  max-width: 960px;
   position: relative;
-  width: 960px;
 }
 
-.container.is-fluid {
-  margin-left: 24px;
-  margin-right: 24px;
-  max-width: none;
-  width: auto;
+@media screen and (min-width: 1008px) {
+  .container {
+    max-width: 960px;
+    width: 960px;
+  }
+  .container.is-fluid {
+    margin-left: 24px;
+    margin-right: 24px;
+    max-width: none;
+    width: auto;
+  }
 }
 
 @media screen and (max-width: 1199px) {
@@ -3780,6 +3784,11 @@ input[type="submit"].button {
 
 .dropdown.is-active .dropdown-menu, .dropdown.is-hoverable:hover .dropdown-menu {
   display: block;
+}
+
+.dropdown.is-right .dropdown-menu {
+  left: auto;
+  right: 0;
 }
 
 .dropdown-menu {
