--- a/docs/documentation/layout/container.html
+++ b/docs/documentation/layout/container.html
@@ -76,13 +76,14 @@ doc-subtab: container
 
 {% highlight html %}{{container_example}}{% endhighlight %}
 
+<section class="section">
 <div class="container">
-  <hr>
   <h3 class="title">Fluid container</h3>
   <div class="content">
     <p>If you don't want to have a maximum width but want to keep the 24px margin on the left and right sides, add the <code>is-fluid</code> modifier:</p>
   </div>
 </div>
+</section>
 
 <div class="example is-fullwidth">
   {{container_fluid_example}}
@@ -90,8 +91,8 @@ doc-subtab: container
 
 {% highlight html %}{{container_fluid_example}}{% endhighlight %}
 
+<section class="section">
 <div class="container">
-  <hr>
   <h3 class="title">Breakpoint containers</h3>
   <div class="content">
     <p>
@@ -103,6 +104,7 @@ doc-subtab: container
     </p>
   </div>
 </div>
+</section>
 
 <div class="example is-fullwidth">
   {{container_widescreen_example}}
